--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,6 +3,6 @@ maxColumn = 120
 includeCurlyBraceInSelectChains = false
 align = most
 version = "2.0.1"
-trailingCommas = preserve
+// trailingCommas = preserve
 newlines.penalizeSingleSelectMultiArgList = false
 newlines.alwaysBeforeMultilineDef = false
